--- a/index.html
+++ b/index.html
@@ -3,31 +3,22 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" href="master.css">
     <title>TODO LIST</title>
   </head>
   <body>
+<h1>What to do Today</h1>
+<div class="flex">
 
-    <form>
-      <input type="text" id="new-todo" placeholder="What needs to be done?">
-    </form>
+<form>
+<input type="text" id="new-todo" name="" placeholder="What are we going to do?" autofocus="true" >
+</form>
 
-    <ol id="todolist">
-      <li class="todo">
-        <input id="todo-1" type="checkbox">
-        <label for="todo-1">jump into unknown</label>
-      </li>
-      <li class="todo completed">
-        <input id="todo-2" type="checkbox" checked>
-        <label for="todo-2">visit gym for 24hrs</label>
-      </li>
-    </ol>
-    <div class="footer">
-      Todo: <span id="todo-count">1</span> •
-      Done: <span id="completed-count">0</span> •
-      Total: <span id="total-count">1</span>
-    </div>
-  </div>
+</div>
+    <ul id="todoList">
+
+    </ul>
 
     <script type="text/javascript" src="todo.js">
 
